--- a/values.yaml
+++ b/values.yaml
@@ -1,82 +1,238 @@
-# Default values for MediaServer.
+# Default values for k8s-mediaserver.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+general:
+  ingress_host: k8s-mediaserver.k8s.test
+  plex_ingress_host: k8s-plex.k8s.test
+  image_tag: latest
+  #UID to run the process with
+  puid: 1000
+  #GID to run the process with
+  pgid: 1000
+  #Persistent storage selections and pathing
+  storage:
+    customVolume: false  #set to true if not using a PVC (must provide volume below)
+    pvcName: mediaserver-pvc
+    size: 5Gi
+    pvcStorageClass: ""
+    # the path starting from the top level of the pv you're passing. If your share is server.local/share/, then tv is server.local/share/media/tv
+    subPaths:
+      tv: media/tv
+      movies: media/movies
+      downloads: downloads
+      transmission: transmission
+      sabnzbd: sabnzbd
+      config: config
+    volumes: {}
+    #  hostPath:
+    #    path: /mnt/share
+  ingress:
+    ingressClassName: ""
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+sonarr:
+  enabled: true
+  container:
+    image: docker.io/linuxserver/sonarr
+    nodeSelector: {}
+    port: 8989
+  service:
+    type: ClusterIP
+    port: 8989
+    nodePort:
+    extraLBService: false
+    # Defines an additional LB service, requires cloud provider service or MetalLB
+  ingress:
+    enabled: true
+    annotations: {}
+    path: /sonarr
+    tls:
+      enabled: false
+      secretName: ""
+  resources: {}
+  volume: {}
+    #name: pvc-sonarr-config
+    #storageClassName: longhorn
+    #annotations:
+    #  my-annotation/test: my-value
+    #labels:
+    #  my-label/test: my-other-value
+    #accessModes: ReadWriteOnce
+    #storage: 5Gi
+    #selector: {}
 
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+radarr:
+  enabled: true
+  container:
+    image: docker.io/linuxserver/radarr
+    nodeSelector: {}
+    port: 7878
+  service:
+    type: ClusterIP
+    port: 7878
+    nodePort:
+    extraLBService: false
+    # Defines an additional LB service, requires cloud provider service or MetalLB
+  ingress:
+    enabled: true
+    annotations: {}
+    path: /radarr
+    tls:
+      enabled: false
+      secretName: ""
+  resources: {}
+  volume: {}
+    #name: pvc-radarr-config
+    #storageClassName: longhorn
+    #annotations: {}
+    #labels: {}
+    #accessModes: ReadWriteOnce
+    #storage: 5Gi
+    #selector: {}
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+jackett:
+  enabled: true
+  container:
+    image: docker.io/linuxserver/jackett
+    nodeSelector: {}
+    port: 9117
+  service:
+    type: ClusterIP
+    port: 9117
+    nodePort:
+    extraLBService: false
+    # Defines an additional LB service, requires cloud provider service or MetalLB
+  ingress:
+    enabled: true
+    annotations: {}
+    path: /jackett
+    tls:
+      enabled: false
+      secretName: ""
+  resources: {}
+  volume: {}
+  #  name: pvc-jackett-config
+  #  storageClassName: longhorn
+  #  annotations: {}
+  #  labels: {}
+  #  accessModes: ReadWriteOnce
+  #  storage: 5Gi
+  #  selector: {}
 
-podAnnotations: {}
+transmission:
+  enabled: true
+  container:
+    image: docker.io/linuxserver/transmission
+    nodeSelector: {}
+    port:
+      utp: 9091
+      peer: 51413
+  service:
+    utp:
+      type: ClusterIP
+      port: 9091
+      nodePort:
+      # Defines an additional LB service, requires cloud provider service or MetalLB
+      extraLBService: false
+    peer:
+      type: ClusterIP
+      port: 51413
+      nodePort:
+      nodePortUDP:
+      # Defines an additional LB service, requires cloud provider service or MetalLB
+      extraLBService: false
+  ingress:
+    enabled: true
+    annotations: {}
+    path: /transmission
+    tls:
+      enabled: false
+      secretName: ""
+  config:
+    auth:
+      enabled: false
+      username: ""
+      password: ""
+  resources: {}
+  volume: {}
+  #  name: pvc-transmission-config
+  #  storageClassName: longhorn
+  #  annotations: {}
+  #  labels: {}
+  #  accessModes: ReadWriteOnce
+  #  storage: 5Gi
+  #  selector: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+sabnzbd:
+  enabled: true
+  container:
+    image: docker.io/linuxserver/sabnzbd
+    nodeSelector: {}
+    port:
+      http: 8080
+      https: 9090
+  service:
+    http:
+      type: ClusterIP
+      port: 8080
+      nodePort:
+      # Defines an additional LB service, requires cloud provider service or MetalLB
+      extraLBService: false
+    https:
+      type: ClusterIP
+      port: 9090
+      nodePort:
+      # Defines an additional LB service, requires cloud provider service or MetalLB
+      extraLBService: false
+  ingress:
+    enabled: true
+    annotations: {}
+    path: /sabnzbd
+    tls:
+      enabled: false
+      secretName: ""
+  resources: {}
+  volume: {}
+  #  name: pvc-plex-config
+  #  storageClassName: longhorn
+  #  annotations: {}
+  #  labels: {}
+  #  accessModes: ReadWriteOnce
+  #  storage: 5Gi
+  #  selector: {}
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+plex:
+  enabled: true
+  claim: "CHANGEME"
+  replicaCount: 1
+  container:
+    image: docker.io/linuxserver/plex
+    nodeSelector: {}
+    port: 32400
+  service:
+    type: ClusterIP
+    port: 32400
+    nodePort:
+    # Defines an additional LB service, requires cloud provider service or MetalLB
+    extraLBService: false
+  ingress:
+    enabled: true
+    annotations: {}
+    tls:
+      enabled: false
+      secretName: ""
+  resources: {}
+  #  limits:
+  #    cpu: 100m
+  #    memory: 100Mi
+  #  requests:
+  #    cpu: 100m
+  #    memory: 100Mi
+  volume: {}
+  #  name: pvc-plex-config
+  #  storageClassName: longhorn
+  #  annotations: {}
+  #  labels: {}
+  #  accessModes: ReadWriteOnce
+  #  storage: 5Gi
+  #  selector: {}
