--- a/charts/mediaserver/Chart.yaml
+++ b/charts/mediaserver/Chart.yaml
@@ -19,3 +19,9 @@ version: 0.1.5
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.1.5"
+# Add the tag field to specify the chart version
+# It should be the same as the version field
+# Note: The tag should be prefixed with "v"
+# and follow Semantic Versioning (https://semver.org/)
+tags:
+  - "v0.1.5"
