--- a/charts/k8s-mediaserver/Chart.yaml
+++ b/charts/k8s-mediaserver/Chart.yaml
@@ -9,4 +9,4 @@ version: 0.7.0
 # Note: The tag should be prefixed with "v"
 # and follow Semantic Versioning (https://semver.org/)
 tags:
-  - "v0.7.0"
+  - kubealex
