--- a/charts/mediaserver/Chart.yaml
+++ b/charts/mediaserver/Chart.yaml
@@ -24,4 +24,4 @@ appVersion: "0.1.5"
 # Note: The tag should be prefixed with "v"
 # and follow Semantic Versioning (https://semver.org/)
 tags:
-  - "v0.1.5"
+  - xerhab
