--- a/charts/k8s-mediaserver/Chart.yaml
+++ b/charts/k8s-mediaserver/Chart.yaml
@@ -1,12 +1,14 @@
 apiVersion: v2
-appVersion: 1.16.0
+appVersion: 1.16.1
 description: A Helm chart for Kubernetes mediaserver
 name: k8s-mediaserver
 type: application
-version: 0.7.0
+version: 0.7.1
 # Add the tag field to specify the chart version
 # It should be the same as the version field
 # Note: The tag should be prefixed with "v"
 # and follow Semantic Versioning (https://semver.org/)
 tags:
-  - kubealex
+  - media
+  - server
+  - kubernetes
