--- a/charts/k8s-mediaserver/Chart.yaml
+++ b/charts/k8s-mediaserver/Chart.yaml
@@ -8,7 +8,4 @@ version: 0.7.1
 # It should be the same as the version field
 # Note: The tag should be prefixed with "v"
 # and follow Semantic Versioning (https://semver.org/)
-tags:
-  - media
-  - server
-  - kubernetes
+tag: kubealex
