--- a/charts/mediaserver/values.yaml
+++ b/charts/mediaserver/values.yaml
@@ -188,7 +188,7 @@ sabnzbd:
       enabled: false
       secretName: ""
   resources: {}
-  volume: {}
+  volume: 
    name: pvc-plex-config
    storageClassName: 
    annotations: {}
