fix sabnzbd pvc

--- a/charts/mediaserver/values.yaml
+++ b/charts/mediaserver/values.yaml
@@ -189,7 +189,7 @@ sabnzbd:
       secretName: ""
   resources: {}
   volume: 
-   name: pvc-plex-config
+   name: pvc-sabnzbd-config
    storageClassName: 
    annotations: {}
    labels: {}
