--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,10 +16,6 @@ jobs:
         token: '${{ github.token }}'
         values: |
           name: foobar
-        value-files: >-
-        [
-          "values.yaml", 
-          "values.production.yaml"
-        ]
+        value-files: "values.yaml"
       env:
-        KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+        KUBECONFIG_FILE: "${{ secrets.KUBECONFIG }}"
