--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,8 @@
-name: Deploy
-on: ['deployment']
+name: Install Helm Chart
+on:
+  push:
+    branches:
+      - gh-pages
 
 jobs:
   deployment:
@@ -16,6 +19,6 @@ jobs:
         token: '${{ github.token }}'
         values: |
           name: foobar
-        value-files: "values.yaml"
+        value-files: "dev.values.yaml"
       env:
         KUBECONFIG_FILE: "${{ secrets.KUBECONFIG }}"
