--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -1,24 +1,26 @@
-name: Install Helm Chart
 on:
   push:
     branches:
       - gh-pages
 
 jobs:
-  deployment:
-    runs-on: 'ubuntu-latest'
+  deploy:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: 'Deploy'
-      uses: 'deliverybot/helm@v1'
-      with:
-        release: 'xerhab/mediaserver'
-        namespace: 'dev'
-        chart: 'mediaserver'
-        token: '${{ github.token }}'
-        values: |
-          name: foobar
-        value-files: "dev.values.yaml"
-      env:
-        KUBECONFIG_FILE: "${{ secrets.KUBECONFIG }}"
+      - name: Install dependencies
+        run: |
+          helm repo add xerktech https://charts.xerktech.com
+          helm dependency update
+
+      - name: Deploy to Kubernetes
+        uses: deliverybot/helm@master
+        with:
+          chart: mediaserver
+          repository: https://charts.xerktech.com
+          namespace: dev
+          release: mediaserver-release
+          values: |
+            $(cat ./dev.values.yaml)
