--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -10,18 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          ref: gh-pages
 
-      - name: Deploy to Kubernetes
-        uses: deliverybot/helm@master
-        with:
-          chart: mediaserver
-          repository: https://charts.xerktech.com
-          namespace: dev
-          release: mediaserver-release
-          values: |
-            $(cat ./dev.values.yaml)
-        env:
-          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+#       - name: Deploy to Kubernetes
+#         uses: deliverybot/helm@master
+#         with:
+#           chart: mediaserver
+#           repository: https://charts.xerktech.com
+#           namespace: dev
+#           release: mediaserver-release
+#           values: |
+#             $(cat ./dev.values.yaml)
+#         env:
+#           KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
