--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -15,7 +15,7 @@ jobs:
           ref: gh-pages
 
       - name: Deploy to Kubernetes
-        uses: glopezep/helm@v1.7.1
+        uses: vimeda/helm@v1.6.8
         with:
           chart: mediaserver
           repository: https://charts.xerktech.com
