--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: gh-pages
+      
+      - name: Update Helm repository
+        run: helm repo update
 
       - name: Deploy to Kubernetes
         uses: vimeda/helm@v1.6.8
