--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: vimeda/helm@v1.6.8
         with:
           chart: mediaserver
-#           repository: https://charts.xerktech.com
+          repository: https://charts.xerktech.com
           namespace: dev
           release: mediaserver
           values: |
