--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -16,7 +16,7 @@ jobs:
       
       - name: Add Helm repository
         run: |
-          helm repo add https://charts.xerktech.com
+          helm repo add xerhab https://charts.xerktech.com
           helm repo update
 
       - name: Deploy to Kubernetes
