--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Deploy to Kubernetes
         uses: vimeda/helm@v1.6.8
         with:
-          chart: mediaserver
+          chart: xerhab/mediaserver
 #           repository: https://charts.xerktech.com
           namespace: dev
           release: mediaserver
