--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -14,16 +14,16 @@ jobs:
         with:
           ref: main
       
-      - name: Add Helm repository
-        run: |
-          helm repo add xerhab https://charts.xerktech.com
-          helm repo update
+#       - name: Add Helm repository
+#         run: |
+#           helm repo add xerhab https://charts.xerktech.com
+#           helm repo update
 
       - name: Deploy to Kubernetes
         uses: vimeda/helm@v1.6.8
         with:
           chart: xerhab/mediaserver
-#           repository: https://charts.xerktech.com
+          repository: https://charts.xerktech.com
           namespace: dev
           release: mediaserver
           values: |
