--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -22,8 +22,9 @@ jobs:
       - name: Deploy to Kubernetes
         uses: vimeda/helm@v1.6.8
         with:
-          chart: xerhab/mediaserver
-          repository: https://charts.xerktech.com
+          chart: mediaserver
+          repo: https://charts.xerktech.com
+          repo-alias: xerhab
           namespace: dev
           release: mediaserver
           values: |
