--- a/.github/workflows/install.dev.yaml
+++ b/.github/workflows/install.dev.yaml
@@ -23,6 +23,7 @@ jobs:
         uses: vimeda/helm@v1.6.8
         with:
           chart: xerhab/mediaserver
+          chart-version: latest
           repo: https://charts.xerktech.com
           repo-alias: xerhab
           namespace: dev
