--- a/.github/workflows/install.dev.yaml
+++ b/.github/workflows/install.dev.yaml
@@ -13,17 +13,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: gh-pages
-      
-#       - name: Add Helm repository
-#         run: |
-#           helm repo add xerhab https://charts.xerktech.com
-#           helm repo update
 
       - name: Deploy to Kubernetes
         uses: vimeda/helm@v1.6.8
         with:
           chart: xerhab/mediaserver
-          chart-version: 0.7.6
+#           chart-version: 0.7.6
           repo: https://charts.xerktech.com
           repo-alias: xerhab
           namespace: dev
