--- a/.github/workflows/install.dev.yaml
+++ b/.github/workflows/install.dev.yaml
@@ -24,5 +24,6 @@ jobs:
           namespace: dev
           release: mediaserver
           value-files: dev.values.yaml
+          task: upgrade
         env:
           KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
