--- a/.github/workflows/install.dev.yaml
+++ b/.github/workflows/install.dev.yaml
@@ -1,9 +1,9 @@
 name: Helm Install - Dev
 
 on:
-  push:
-    branches:
-      - gh-pages
+  workflow_run:
+    types: [completed]
+    workflows: ["pages-build-deployment"]
 
 jobs:
   release:
