--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,3 +23,30 @@ jobs:
         uses: helm/chart-releaser-action@v1.5.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        
+  deploy:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for 2 minutes
+        run: sleep 120
+        
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+
+      - name: Deploy to Kubernetes
+        uses: vimeda/helm@v1.6.8
+        with:
+          chart: xerhab/mediaserver
+#           chart-version: 0.7.6
+          repo: https://charts.xerktech.com
+          repo-alias: xerhab
+          namespace: dev
+          release: mediaserver
+          value-files: dev.values.yaml
+          task: upgrade
+        env:
+          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+  
