--- a/.github/workflows/install.dev.yaml
+++ b/.github/workflows/install.dev.yaml
@@ -1,29 +1,29 @@
-name: Helm Install - Dev
+# name: Helm Install - Dev
 
-on:
-  workflow_run:
-    types: [completed]
-    workflows: ["pages-build-deployment"]
+# on:
+#   workflow_run:
+#     types: [completed]
+#     workflows: ["pages-build-deployment"]
 
-jobs:
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: gh-pages
+# jobs:
+#   release:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#         with:
+#           ref: gh-pages
 
-      - name: Deploy to Kubernetes
-        uses: vimeda/helm@v1.6.8
-        with:
-          chart: xerhab/mediaserver
-#           chart-version: 0.7.6
-          repo: https://charts.xerktech.com
-          repo-alias: xerhab
-          namespace: dev
-          release: mediaserver
-          value-files: dev.values.yaml
-          task: upgrade
-        env:
-          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+#       - name: Deploy to Kubernetes
+#         uses: vimeda/helm@v1.6.8
+#         with:
+#           chart: xerhab/mediaserver
+# #           chart-version: 0.7.6
+#           repo: https://charts.xerktech.com
+#           repo-alias: xerhab
+#           namespace: dev
+#           release: mediaserver
+#           value-files: dev.values.yaml
+#           task: upgrade
+#         env:
+#           KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
