--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
     needs: release
     runs-on: ubuntu-latest
     steps:
-      - name: Wait for 2 minutes
-        run: sleep 120
+      - name: Wait for 30 seconds
+        run: sleep 30
         
       - name: Checkout
         uses: actions/checkout@v2
