--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -1,33 +1,33 @@
-name: Helm Install - Dev
+# name: Helm Install - Dev
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: main
+# jobs:
+#   release:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#         with:
+#           ref: main
       
-#       - name: Add Helm repository
-#         run: |
-#           helm repo add xerhab https://charts.xerktech.com
-#           helm repo update
+# #       - name: Add Helm repository
+# #         run: |
+# #           helm repo add xerhab https://charts.xerktech.com
+# #           helm repo update
 
-      - name: Deploy to Kubernetes
-        uses: vimeda/helm@v1.6.8
-        with:
-          chart: xerhab/mediaserver
-          repo: https://charts.xerktech.com
-          repo-alias: xerhab
-          namespace: dev
-          release: mediaserver
-          values: |
-            $(cat ./dev.values.yaml)
-        env:
-          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+#       - name: Deploy to Kubernetes
+#         uses: vimeda/helm@v1.6.8
+#         with:
+#           chart: xerhab/mediaserver
+#           repo: https://charts.xerktech.com
+#           repo-alias: xerhab
+#           namespace: dev
+#           release: mediaserver
+#           values: |
+#             $(cat ./dev.values.yaml)
+#         env:
+#           KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
