--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -3,7 +3,7 @@ name: Helm Install - Dev
 on:
   workflow_run:
     types: [completed]
-    workflows: ["Release Charts"]
+    workflows: ["release.yaml"]
 
 jobs:
   release:
