--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -3,7 +3,7 @@ name: Helm Install - Dev
 on:
   push:
     branches:
-      - gh-pages
+      - main
 
 jobs:
   release:
@@ -12,10 +12,10 @@ jobs:
       - name: Wait for 30 seconds
         run: sleep 30
 
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: gh-pages
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#         with:
+#           ref: main
 
       - name: Deploy to Kubernetes
         uses: vimeda/helm@v1.6.8
