--- a/.github/workflows/dev.install.yaml
+++ b/.github/workflows/dev.install.yaml
@@ -12,10 +12,10 @@ jobs:
       - name: Wait for 30 seconds
         run: sleep 30
 
-#       - name: Checkout
-#         uses: actions/checkout@v2
-#         with:
-#           ref: main
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: main
 
       - name: Deploy to Kubernetes
         uses: vimeda/helm@v1.6.8
